--- a/src/components/detail-item/DetailItem.module.css
+++ b/src/components/detail-item/DetailItem.module.css
@@ -36,7 +36,7 @@
   display: flex;
   flex-direction: column;
   width: 140px;
-  padding: 25px 35px 24px 35px;
+  padding: 25px 15px 24px 15px;
   border-radius: 0px 5px 5px 0px;
   background-color: rgba(229, 229, 229, 1);
   box-shadow: 5px 5px 20px 0px rgba(51, 51, 51, 0.25);
@@ -87,4 +87,36 @@
 .stat-wrapper {
   padding-top: 21px;
   margin: auto auto 0 auto;
+}
+
+.btn_wrapper {
+  padding-top: 20px;
+  text-align: center;
+}
+
+.close_btn {
+  font-family: Roboto;
+  font-size: 12px;
+  font-weight: 400;
+  line-height: 14px;
+  letter-spacing: 0em;
+  text-align: center;
+  color: #ffffff;
+  border: none;
+  background-color: #d40c0c;
+  border-radius: 5px;
+  box-shadow: 2px 0px 4px 0px #d40c0c;
+  width: 100px;
+  height: 32px;
+}
+
+.close_btn:hover {
+  cursor: pointer;
+  box-shadow: none;
+  background-color: #ff5f5f;
+}
+
+.close_btn:active {
+  background-color: #832020;
+  transform: scale(0.98);
 }
