--- a/src/components/app/App.module.css
+++ b/src/components/app/App.module.css
@@ -6,25 +6,10 @@
 }
 
 a {
-  color: #3498db;
+  color: var(--color-link);
   font-size: 25px;
 }
 
 a:hover {
-  color: #1abc9c;
-}
-
-nav {
-  background-color: #2c3e50;
-  padding: 10px;
-}
-
-nav a {
-  margin: 15px;
-}
-
-nav a.active:hover {
-  color: #ffffff;
-  text-decoration: none;
-  cursor: default;
+  color: var(--color-link-hover);
 }
