--- a/src/components/detail-item/DetailItem.module.css
+++ b/src/components/detail-item/DetailItem.module.css
@@ -14,6 +14,7 @@
   flex-direction: row;
   box-shadow: 5px 10px 10px 0px rgba(47, 128, 237, 0.25);
   border-radius: 0px 5px 5px 0px;
+  background-color: var(--color-white);
 }
 
 .item_info:hover {
@@ -37,7 +38,7 @@
   width: 140px;
   padding: 25px 15px 24px 15px;
   border-radius: 0px 5px 5px 0px;
-  background-color: rgba(229, 229, 229, 1);
+  background-color: var(--color-info-bg);
   box-shadow: 5px 5px 20px 0px rgba(51, 51, 51, 0.25);
 }
 
@@ -48,26 +49,26 @@
   align-items: center;
 }
 
+.title,
+.title_desc {
+  font-family: Roboto;
+  letter-spacing: 0em;
+  text-align: left;
+  color: var(--color-text);
+}
+
 .title {
   max-width: 240px;
-  font-family: Roboto;
   font-size: 24px;
   font-weight: 700;
   line-height: 28px;
-  letter-spacing: 0em;
-  text-align: left;
-  color: rgba(0, 0, 0, 1);
 }
 
 .title_desc {
   padding: 4px 0px;
-  font-family: Roboto;
   font-size: 14px;
   font-weight: 400;
   line-height: 16px;
-  letter-spacing: 0em;
-  text-align: left;
-  color: rgba(0, 0, 0, 1);
 }
 
 .description {
@@ -79,7 +80,7 @@
   line-height: 14px;
   letter-spacing: 0em;
   text-align: left;
-  color: rgba(130, 130, 130, 1);
+  color: var(--color-description);
 }
 
 .stat-wrapper {
@@ -101,9 +102,9 @@
   text-align: center;
   color: #ffffff;
   border: none;
-  background-color: #d40c0c;
+  background-color: var(--color-btn-close-bg);
   border-radius: 5px;
-  box-shadow: 2px 0px 4px 0px #d40c0c;
+  box-shadow: 2px 0px 4px 0px var(--color-btn-close-bg);
   width: 100px;
   height: 32px;
 }
@@ -111,10 +112,10 @@
 .close_btn:hover {
   cursor: pointer;
   box-shadow: none;
-  background-color: #ff5f5f;
+  background-color: var(--color-btn-close-hover);
 }
 
 .close_btn:active {
-  background-color: #832020;
+  background-color: var(--color-btn-close-active);
   transform: scale(0.98);
 }
