--- a/src/components/not-found/NotFound.module.css
+++ b/src/components/not-found/NotFound.module.css
@@ -17,7 +17,7 @@
   line-height: 28px;
   letter-spacing: 0em;
   text-align: left;
-  color: #828282;
+  color: var(--color-description);
 }
 
 .message {
