--- a/src/components/detail-item/DetailItem.module.css
+++ b/src/components/detail-item/DetailItem.module.css
@@ -1,15 +1,9 @@
 .wrapper {
   padding: 20px;
 }
-.item {
-  max-width: 1200px;
-  margin: 0 auto;
-  display: flex;
-  flex-direction: row;
-}
 
 .item_info {
-  max-height: 461px;
+  height: 200px;
   display: flex;
   flex-direction: row;
   box-shadow: 5px 10px 10px 0px rgba(47, 128, 237, 0.25);
@@ -25,9 +19,9 @@
 }
 
 .item_img {
-  width: 180px;
-  max-height: 180px;
-  object-fit: cover;
+  width: 200px;
+  height: 200px;
+  object-fit: contain;
   border-radius: 0px 0px 0px 5px;
   box-shadow: 5px 10px 20px 0px rgba(51, 51, 51, 0.25);
 }
@@ -36,11 +30,65 @@
   display: flex;
   flex-direction: column;
   width: 140px;
-  padding: 25px 15px 24px 15px;
+  padding: 15px 15px 14px 15px;
   border-radius: 0px 5px 5px 0px;
   background-color: var(--color-info-bg);
   box-shadow: 5px 5px 20px 0px rgba(51, 51, 51, 0.25);
 }
+
+.checkbox_container {
+  display: inline-flex;
+  align-items: center;
+  cursor: pointer;
+  user-select: none;
+  position: relative;
+  padding-left: 28px;
+  font-size: 14px;
+}
+
+.checkbox_input {
+  position: absolute;
+  opacity: 0;
+  cursor: pointer;
+  height: 0;
+  width: 0;
+}
+
+.custom_checkbox {
+  position: absolute;
+  right: 0;
+  top: 0;
+  height: 18px;
+  width: 18px;
+  background-color: var(--color-white);
+  border: 2px solid var(--color-text);
+  border-radius: 4px;
+  box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.1);
+  transition: background-color 0.2s ease;
+}
+
+.checkbox_input:checked + .custom_checkbox {
+  background-color: var(--color-btn-close-bg);
+  border-color: var(--color-btn-close-bg);
+}
+
+.custom_checkbox::after {
+  content: '';
+  position: absolute;
+  display: none;
+  left: 5px;
+  top: 2px;
+  width: 5px;
+  height: 10px;
+  border: solid var(--color-white);
+  border-width: 0 2px 2px 0;
+  transform: rotate(45deg);
+}
+
+.checkbox_input:checked + .custom_checkbox::after {
+  display: block;
+}
+
 
 .header {
   display: flex;
