feat: add store for items

--- a/src/components/detail-item/DetailItem.module.css
+++ b/src/components/detail-item/DetailItem.module.css
@@ -1,11 +1,27 @@
+/* .wrapper {
+  padding: 20px;
+} */
+
 .wrapper {
   padding: 20px;
+  display: flex;
+  align-items: center;
 }
+
+/* .item_info {
+  height: 200px;
+  display: flex;
+  flex-direction: row;
+  box-shadow: 5px 10px 10px 0px rgba(47, 128, 237, 0.25);
+  border-radius: 0px 5px 5px 0px;
+  background-color: var(--color-white);
+} */
 
 .item_info {
   height: 200px;
   display: flex;
   flex-direction: row;
+  flex: 1;
   box-shadow: 5px 10px 10px 0px rgba(47, 128, 237, 0.25);
   border-radius: 0px 5px 5px 0px;
   background-color: var(--color-white);
@@ -37,6 +53,25 @@
 }
 
 .checkbox_container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding-right: 12px;
+  user-select: none;
+}
+
+.custom_checkbox {
+  height: 18px;
+  width: 18px;
+  background-color: var(--color-white);
+  border: 2px solid var(--color-text);
+  border-radius: 4px;
+  box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.1);
+  transition: background-color 0.2s ease;
+  position: relative;
+}
+
+/* .checkbox_container {
   display: inline-flex;
   align-items: center;
   cursor: pointer;
@@ -44,17 +79,23 @@
   position: relative;
   padding-left: 28px;
   font-size: 14px;
-}
+} */
 
 .checkbox_input {
+  position: absolute;
+  opacity: 0;
+  pointer-events: none;
+}
+
+/* .checkbox_input {
   position: absolute;
   opacity: 0;
   cursor: pointer;
   height: 0;
   width: 0;
-}
+} */
 
-.custom_checkbox {
+/* .custom_checkbox {
   position: absolute;
   right: 0;
   top: 0;
@@ -65,7 +106,7 @@
   border-radius: 4px;
   box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.1);
   transition: background-color 0.2s ease;
-}
+} */
 
 .checkbox_input:checked + .custom_checkbox {
   background-color: var(--color-btn-close-bg);
