--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,7 @@
   --color-bg: #f4f4f4;
   --color-link: #3498db;
   --color-link-hover: #1abc9c;
+  --color-link-active: #e2dfdf;
   --color-nav-bg: #2c3e50;
   --color-info-bg: #e5e5e5;
   --color-description: #828282;
