--- a/src/components/flyout/Flyout.module.css
+++ b/src/components/flyout/Flyout.module.css
@@ -1,3 +1,12 @@
+.flyoutInner {
+  max-width: 1400px;
+  margin: 0 auto;
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
 .flyout {
   position: fixed;
   bottom: 0;
